implemented missing functions in the clan command